--- a/trunk/ddscanner/app/src/main/res/menu/menu_add_review.xml
+++ b/trunk/ddscanner/app/src/main/res/menu/menu_add_review.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/send_review"
         android:orderInCategory="100"
-        android:title="@string/send"
+        android:title="@string/post_review"
         app:showAsAction= "ifRoom"/>
 </menu>
