* country name in layout

--- a/trunk/ddscanner/app/src/main/res/layout/item_complete_achievement.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_complete_achievement.xml
@@ -58,7 +58,7 @@
                     android:layout_below="@+id/type"
                     android:textColor="#959595"
                     android:textSize="11sp"
-                    tools:text="@{achievementViewModel.completeAchievement.country}" />
+                    tools:text="@{achievementViewModel.completeAchievement.countryName}" />
             </RelativeLayout>
 
             <TextView
