--- a/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_edit_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_edit_text.xml
@@ -5,4 +5,6 @@
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
     android:hint="@string/phone"
+    android:lines="1"
+    android:inputType="phone"
     xmlns:android="http://schemas.android.com/apk/res/android" />
