--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -227,6 +227,7 @@
                             android:background="@drawable/red_oval" />
 
                         <ImageView
+                            android:visibility="gone"
                             android:id="@+id/instructors_arrow"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
