--- a/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_edit_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_edit_text.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.rey.material.widget.EditText android:id="@+id/phone"
-    style="@style/DiveCenterProfileEditText"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:hint="@string/phone"
-    android:lines="1"
-    android:inputType="phone"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:orientation="vertical">
+
+    <com.rey.material.widget.EditText xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/phone"
+        style="@style/DiveCenterProfileEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/phone"
+        android:inputType="phone"
+        android:lines="1"
+        android:paddingTop="10dp" />
+
+    <TextView
+        android:layout_marginLeft="0dp"
+        android:text="@string/enter_a_valid_phone_number"
+        android:id="@+id/phone_error"
+        style="@style/ValidationErrorTextView" />
+</LinearLayout>
