--- a/trunk/ddscanner/app/src/main/res/layout/item_photo_liked.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_photo_liked.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="likeViewModel"
-            type="com.ddscanner.screens.user.likes.LikeReviewViewModel" />
+            type="com.ddscanner.screens.user.likes.LikePhotoItemViewModel" />
     </data>
 
     <LinearLayout
@@ -30,53 +30,49 @@
                 android:src="@color/black_text"
                 app:loadAvatarFrom="@{likeViewModel}"/>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="14dp"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="12dp"
+                    android:layout_toLeftOf="@+id/photo_layout"
                     android:id="@+id/text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black_text"
                     android:textSize="15sp"
-                    app:setTextFrom="@{likeViewModel}"
-                    tools:text="Racha Yai Wreck review «Bryce canyon a stunning us travel destination…»" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                    app:setLikedPhotoTextFrom="@{likeViewModel}"
+                    tools:text="Alexand Korshin liked your photo Racha Yai Wreck" />
+                <LinearLayout
+                    android:gravity="center_vertical"
+                    android:layout_alignParentRight="true"
+                    android:id="@+id/photo_layout"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="7dp">
-
-                    <TextView
-                        android:id="@+id/whoDisliked"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="#a3a3a3"
-                        android:textSize="13sp"
-                        tools:text="Disliked by Cameron Dias"
-                        android:layout_toLeftOf="@+id/timeAgo"
-                        android:layout_alignParentLeft="true"
-                        android:lines="1"
-                        android:ellipsize="end"
-                        app:likedTextFrom="@{likeViewModel}"/>
-
+                    android:layout_marginRight="15dp"
+                    android:orientation="horizontal">
                     <TextView
                         android:id="@+id/timeAgo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_gravity="right"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginRight="8dp"
                         android:textColor="#a3a3a3"
-                        android:textSize="13sp"
+                        android:textSize="12sp"
                         tools:text="12w"
                         app:loadTimeFrom="@{likeViewModel}"/>
-                </RelativeLayout>
-            </LinearLayout>
+
+                    <ImageView
+                        app:loadPhotoFrom="@{likeViewModel}"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@color/black_text"/>
+
+                </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
 
         <ImageView style="@style/DividerStyleFull" />
