--- a/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/fragment_user_profile.xml
@@ -117,6 +117,7 @@
                                 android:textSize="11sp" />
 
                             <TextView
+                                android:layout_marginLeft="0dp"
                                 android:id="@+id/user_comments"
                                 style="@style/ProfileNumberDivespotsSrtyle"
                                 android:text="@{String.valueOf(userProfileViewModel.user.counters.commentsCount)}"
@@ -148,6 +149,7 @@
 
 
                                 <TextView
+                                    android:layout_marginLeft="0dp"
                                     android:id="@+id/user_likes"
                                     style="@style/ProfileNumberDivespotsSrtyle"
                                     android:text="@{String.valueOf(userProfileViewModel.user.counters.likesCount)}"
@@ -175,6 +177,7 @@
 
 
                             <TextView
+                                android:layout_marginLeft="0dp"
                                 android:id="@+id/user_dislikes"
                                 style="@style/ProfileNumberDivespotsSrtyle"
                                 android:text="@{String.valueOf(userProfileViewModel.user.counters.dislikesCount)}"
