--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -127,58 +127,18 @@
         android:orientation="horizontal"
         android:paddingRight="15dp">
 
-        <LinearLayout
+        <com.ddscanner.ui.views.LikeView
             android:id="@+id/like_layout"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="?attr/selectableItemBackground"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp">
+            android:layout_height="match_parent"/>
 
-            <ImageView
-                android:id="@+id/likes_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_review_like_empty" />
-
-            <TextView
-                android:id="@+id/likes_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                tools:text="9"
-                android:textColor="#a3a3a3"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <LinearLayout
+        <com.ddscanner.ui.views.DislikeView
             android:layout_toRightOf="@+id/like_layout"
             android:id="@+id/dislike_layout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="?attr/selectableItemBackground"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp">
+            />
 
-            <ImageView
-                android:id="@+id/dislikes_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_review_dislike_empty" />
-
-            <TextView
-                android:id="@+id/dislikes_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                tools:text="9"
-                android:textColor="#a3a3a3"
-                android:textSize="14sp" />
-        </LinearLayout>
         <TextView
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
