--- a/trunk/ddscanner/app/src/main/res/layout/review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/review_item.xml
@@ -50,7 +50,7 @@
                         android:textColor="@color/black_text"
                         android:textSize="18sp" />
 
-                    <LinearLayout
+                    <com.ddscanner.ui.views.RatingView
                         android:id="@+id/stars"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
