--- a/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_divecenter_profile.xml
@@ -39,7 +39,7 @@
                 app:pv_progressStyle="@style/CircularProgress" />
         <LinearLayout
             android:id="@+id/about_layout"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -204,7 +204,7 @@
                         android:layout_marginTop="16dp">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
 
@@ -227,7 +227,7 @@
                             android:background="@drawable/red_oval" />
 
                         <ImageView
-                            android:visibility="gone"
+                            android:visibility="visible"
                             android:id="@+id/instructors_arrow"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
