--- a/trunk/ddscanner/app/src/main/res/layout/activity_forgot_password.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_forgot_password.xml
@@ -22,6 +22,7 @@
             android:gravity="center" />
         <EditText
             android:id="@+id/email"
+            android:maxLength="254"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@drawable/email_field_back"
