--- a/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/view_diver_sign_up.xml
@@ -39,6 +39,7 @@
                 android:gravity="center_vertical"
                 android:hint="@string/name_register"
                 android:lines="1"
+                android:maxLength="32"
                 android:textColor="@color/black_text"
                 android:textColorHint="#a3a3a3" />
 
