--- a/trunk/ddscanner/app/src/main/res/layout/edit_dc_profile_view.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dc_profile_view.xml
@@ -249,6 +249,47 @@
                         android:layout_marginTop="20dp"
                         style="@style/DividerStyleFull" />
                 </LinearLayout>
+
+                <ImageView
+                    android:layout_marginTop="@dimen/base_block_margin_top"
+                    style="@style/DividerStyleFull" />
+
+                <LinearLayout
+                    style="@style/ContentBlockStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RadioGroup
+                        android:id="@+id/radio_group"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.v7.widget.AppCompatRadioButton
+                            android:id="@+id/company_radio"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:buttonTint="#3b518b"
+                            android:textSize="16sp"
+                            app:checkCompanyRadioButton="@{dcViewModel}"
+                            android:drawablePadding="10dp"
+                            android:text="Company"/>
+
+                        <android.support.v7.widget.AppCompatRadioButton
+                            android:id="@+id/reseller_radio"
+                            android:textSize="16sp"
+                            android:layout_marginTop="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:buttonTint="#3b518b"
+                            app:checkResellerRadioButton="@{dcViewModel}"
+                            android:text="Reseller"/>
+
+                    </RadioGroup>
+
+                </LinearLayout>
+
+                <ImageView
+                    style="@style/DividerStyleFull" />
                 <Button
                     android:layout_margin="20dp"
                     android:layout_width="match_parent"
