--- a/trunk/ddscanner/app/src/main/res/layout/item_translation.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_translation.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="56dp"
     android:background="@color/white"
     android:gravity="center_vertical">
+    <LinearLayout
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/language_name"
         android:layout_width="wrap_content"
@@ -14,9 +19,22 @@
 
     <TextView
         android:id="@+id/name"
+        android:layout_below="@+id/language_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#8b8b8b"
         android:text="@string/add_langueage"
         android:textSize="12sp"/>
-</LinearLayout>
+    </LinearLayout>
+    <ImageView
+        android:layout_alignParentRight="true"
+        android:id="@+id/remove"
+        android:paddingLeft="15dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:scaleType="center"
+        android:layout_width="42dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_addds_delete"/>
+
+</RelativeLayout>
