--- a/trunk/ddscanner/app/src/main/res/layout/item_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_sealife.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    android:layout_marginLeft="5dp"
+<LinearLayout android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="10dp"
     android:layout_width="match_parent"
@@ -9,7 +8,8 @@
     android:orientation="vertical"
     android:background="@drawable/white_background_rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:elevation="2dp">
+    android:elevation="2dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
             <ImageView
                 android:id="@+id/image"
@@ -19,9 +19,12 @@
 
             <TextView
                 android:id="@+id/name"
-                android:text="Ryba"
+                tools:text="Ryba"
+                android:lines="1"
+                android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:paddingLeft="15dp"
+                android:paddingRight="15dp"
                 android:fontFamily="sans-serif-medium"
                 android:textColor="@color/black_text"
                 android:layout_width="match_parent"
