--- a/trunk/ddscanner/app/src/main/res/layout/item_photo_liked.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_photo_liked.xml
@@ -7,13 +7,19 @@
         <variable
             name="likeViewModel"
             type="com.ddscanner.screens.user.likes.LikePhotoItemViewModel" />
+
+        <variable
+            name="handlers"
+            type="com.ddscanner.screens.user.likes.LikesListAdapter.PhotoLikeItemViewHolder" />
+
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#fbfbfb"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:onClick="@{handlers::showDiveSpot}">
 
         <LinearLayout
             android:id="@+id/main_layout"
@@ -28,7 +34,8 @@
                 android:layout_height="40dp"
                 android:layout_margin="14dp"
                 android:src="@color/black_text"
-                app:loadAvatarFrom="@{likeViewModel}"/>
+                app:loadAvatarFrom="@{likeViewModel}"
+                android:onClick="@{handlers::avatarClicked}"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -66,6 +73,7 @@
                         app:loadTimeFrom="@{likeViewModel}"/>
 
                     <ImageView
+                        android:onClick="@{handlers::photoClicked}"
                         app:loadPhotoFrom="@{likeViewModel}"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
