--- a/trunk/ddscanner/app/src/main/res/layout/divespot_review_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/divespot_review_item.xml
@@ -10,11 +10,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp">
+        android:orientation="vertical">
 
         <LinearLayout
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginBottom="11dp"
