--- a/trunk/ddscanner/app/src/main/res/layout/item_review_liked_likes_activity.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/item_review_liked_likes_activity.xml
@@ -23,7 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?attr/selectableItemBackground"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:onClick="@{handlers::contentClicked}">
 
             <ImageView
                 android:onClick="@{handlers::avatarClicked}"
