--- a/trunk/ddscanner/app/src/main/res/layout/product_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/product_item.xml
@@ -38,14 +38,14 @@
                 android:textColor="@color/black_text"
                 android:textSize="18sp" />
 
-            <LinearLayout
+            <com.ddscanner.ui.views.RatingView
                 android:id="@+id/stars"
+                android:layout_below="@+id/product_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/product_title"
-                android:gravity="center_vertical|center_horizontal"
                 android:layout_marginTop="3dp"
-                android:orientation="horizontal"/>
+                android:gravity="center_vertical"
+                android:orientation="horizontal" />
             <TextView
                 android:id="@+id/object"
                 android:layout_width="wrap_content"
