--- a/trunk/ddscanner/app/src/main/res/layout/activity_slider.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_slider.xml
@@ -15,7 +15,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/slider_top_gradient">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="57dp"
