* saving instructor dive center id when user changed profile and doesn't change his divecenter

--- a/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_edit_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_edit_text.xml
@@ -12,6 +12,7 @@
         android:hint="@string/phone"
         android:inputType="phone"
         android:lines="1"
+        android:maxLength="32"
         android:paddingTop="10dp" />
 
     <TextView
