--- a/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_email_edit_text.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/edit_dive_center_email_edit_text.xml
@@ -9,6 +9,7 @@
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
     android:hint="@string/email"
+    android:maxLength="252"
     xmlns:android="http://schemas.android.com/apk/res/android" />
 
     <TextView
