--- a/trunk/ddscanner/app/src/main/res/layout/list_images_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/list_images_item.xml
@@ -18,4 +18,18 @@
         android:src="@drawable/ic_del_circle"
         android:layout_alignParentRight="true"
         />
+    <TextView
+        android:id="@+id/cover_button"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:layout_width="70dp"
+        android:fontFamily="sans-serif-medium"
+        android:layout_height="wrap_content"
+        android:background="@drawable/cover_button_background"
+        android:layout_alignParentBottom="true"
+        android:text="@string/cover"
+        android:gravity="center"
+        android:textSize="10sp"
+        android:visibility="gone"
+        android:textColor="@color/black_text"/>
 </RelativeLayout>
